Closed Bug 358647 Opened 18 years ago Closed 18 years ago

nsIAbDirectory.supportsMailingLists is inconsistent.

Categories

(MailNews Core :: Address Book, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: standard8, Assigned: standard8)

References

Details

Attachments

(1 file)

nsIAbDirectory.supportsMailingLists is inconsistent - highlighted by work in progress on bug 358333.

For instance getting a directory with the uri:

moz-abldapdirectory://ldap_2.servers.pudsey

supports returns false, isMailList returns false - both as expected. With uri:

moz-abmdbdirectory://impab-10.mab

supports returns true, isMailList returns false - again as expected. With uri:

moz-abmdbdirectory://impab-8.mab/MailList1

supports returns true, isMailList returns true. At first glance this is sort of expected, because a moz-abmdbdirectory supports mailing lists. However, it could be taken to imply that we support nested mailing lists - which we don't. Therefore, I think this should actually be supports returns false, isMailList returns true.
Attached patch Patch v1Splinter Review
nsIAbDirectory.supportsMailingLists will return true if its not a mailing list. I've also added more documentation to the idl to make this clearer - note that I've not updated the uuid as its a doc-only change, so I don't think its required.

I don't think this will affect http://lxr.mozilla.org/seamonkey/source/mailnews/compose/src/nsMsgCompose.cpp#4192 - it'll just mean we don't search mailing lists, but as the card is meant to be in the parent anyway, that shouldn't matter.

LDAP doesn't support mailing lists and overrides the function.

David, does our Outlook interface support nested mailing lists and should we be overriding it to let us do so?
Attachment #244004 - Flags: superreview?(bienvenu)
Attachment #244004 - Flags: review?(bienvenu)
Comment on attachment 244004 [details] [diff] [review]
Patch v1

nice, thx.
Attachment #244004 - Flags: superreview?(bienvenu)
Attachment #244004 - Flags: superreview+
Attachment #244004 - Flags: review?(bienvenu)
Attachment #244004 - Flags: review+
Patch checked into trunk -> Fixed.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: