Bug 358647 nsIAbDirectory.supportsMailingLists is inconsistent. r/sr=bienvenu